Fix img overflow (#6)
* chore: fix typo in layout

* fix: ima overflow on mobile devices

--- a/@opensumi/gatsby-theme/site/templates/markdown.module.less
+++ b/@opensumi/gatsby-theme/site/templates/markdown.module.less
@@ -228,6 +228,7 @@
 
     > img,
     > p > img {
+      width: 100%;
       max-width: 600px;
       margin: 0.5em 0;
     }
